サイドバーとチャット画面のレイアウト作成

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,8 @@
 <div class="wrapper">
-  <%= render "side_ber" %>
-  <%= render "main_chat" %>
+  <div class="side-ber">
+    <%= render "side_ber" %>
+  </div>
+  <div class="main-box">
+    <%= render "main_chat" %>
+  </div>
 </div>
