サイドバーのフロント実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,12 +11,43 @@
 .side-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-name a{
+font-size: 16px;
+color: #fafafa;
+text-decoration: none;
+}
+
+.chat-btn {
+ font-size: 10px;
+}
+
+.chat-btn a {
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
 }
 
 .side-main {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+
+.side-room {
+  padding: 20px 0 40px;
+}
+
+.side-room a {
+  color: white;
+  text-decoration: none;
 }
 
 .main-box {
