--- a/app/views/messages/_side_ber.html.erb
+++ b/app/views/messages/_side_ber.html.erb
@@ -1,5 +1,21 @@
     <div class="side-header">
+      <div class="user-name">
+          <a href="#">Yuki</a>
+      </div>
+      <div class="chat-btn">
+          <a href="#">チャットを作成する</a>
+      </div>
     </div>
-    
+
     <div class="side-main">
+      <div class="room">
+        <div class="side-room">
+          <a href="#">techroom1</a>
+        </div>
+      </div>
+      <div class="room">
+        <div class="side-room">
+          <a href="#">techroom2</a>
+        </div>
+      </div>
     </div>
