ユーザー情報表示の実装

--- a/app/views/messages/_side_ber.html.erb
+++ b/app/views/messages/_side_ber.html.erb
@@ -1,6 +1,6 @@
     <div class="side-header">
       <div class="user-name">
-          <a href="#">Yuki</a>
+          <%= link_to current_user.name, edit_user_path(current_user) %>
       </div>
       <div class="chat-btn">
           <a href="#">チャットを作成する</a>
