--- a/app/views/messages/_side_ber.html.erb
+++ b/app/views/messages/_side_ber.html.erb
@@ -3,19 +3,16 @@
           <%= link_to current_user.name, edit_user_path(current_user) %>
       </div>
       <div class="chat-btn">
-          <a href="#">チャットを作成する</a>
+          <%= link_to "チャットを作成する", new_room_path %>
       </div>
     </div>
 
     <div class="side-main">
+     <% current_user.rooms.each do |room| %>
       <div class="room">
-        <div class="side-room">
-          <a href="#">techroom1</a>
-        </div>
+         <div class="side-room">
+          <a href="#"><%= room.name %></a>
+         </div>
       </div>
-      <div class="room">
-        <div class="side-room">
-          <a href="#">techroom2</a>
-        </div>
-      </div>
+     <% end %>
     </div>
