メッセージの表示

--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,37 +12,7 @@
 </div>
 
 <div class="main">
-  <div class="message">
-   <div class="upper-message">
-     <div class="other-name">
-       Yuki
-     </div>
-     <div class="time">
-       2020/3/31(Wed) 12:43:30
-     </div>
-   </div>
-   <div class="lower-message">
-     <div class="comment">
-       おはよう
-     </div>
-   </div>
-  </div>
-
-  <div class="message">
-    <div class="upper-message">
-      <div class="other-name">
-        Yuki
-      </div>
-      <div class="time">
-        2020/3/31(Wed) 12:43:30
-      </div>
-    </div>
-   <div class="lower-message">
-      <div class="comment">
-        こんばんは
-      </div>
-   </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], class: 'main-form', local: true do |f| %>
